Sat Nov 18 11:16:07 UTC 2006 / Arjen de Korte <arjen@de-korte.org>

 - server/upsd.c: add MAXINIT parameter to upsd.conf to make the time upsd waits
   for the DUMPDONE to complete configurable and try to (re)connect to a UPS, before
   declaring it stale, instead of the other way around.
 - server/conf.c: add MAXINIT parameter and MAXAGE must be greater than zero
 - lib/libupsconfig.ch: add MAXINIT parameter
 - conf/upsd.conf: add MAXINIT parameter
 - man/upsd.conf.5: add MAXINIT parameter

Thu Aug 31 15:07:00 UTC 2006 / Jonathan Dion <dion.jonathan@gmail.com>

 - drivers/mains.c : some bugs corrected
 - lib/libupsconfig.c : now allow, when a list of string is expected for a variable, to pu a string
   this string will be considered as a list of string with only one element. this will probably prevent
   a lot of wondering from the users, being more flexible. ( and with only one element, it is perhaps more
   natural to put something like allowfrom = "localhost" than allowfrom = { "localhost" }. Moreover, the
   users won't have to know if the variable need a list or not : if they have only one value, they can alway use string,
   if they have more than one, it is obvious it is a list of string that is needed ^_^

Thu Aug 31 11:31:00 UTC 2006 / Jonathan Dion <dion.jonathan@gmail.com>

 - lib/libupsconfig.ch : added the function get_comments_templates
 - utils/upsconfig.c : modified to use the function get_comments_templates
 - utils/migrateconfig.c : modified to use the function get_comments_templates

Thu Aug 31 90:57:00 UTC 2006 / Jonathan Dion <dion.jonathan@gmail.com>

 - lib/libupsconfig.c : Arnaud defined what need to be saved in configuration file
   when in mode "pm". Modified the code accordingly.

Thu Aug 31 09:25:00 UTC 2006 / Jonathan Dion <dion.jonathan@gmail.com>

 - clients/upsmon.c : correction of a little bug
 - lib/libupsconfig.ch : function that returns integer now return -1 if they failed, not 0 (because 0 can be a valide value)